2009-05-26  Veerapuram Varadhan  <vvaradhan@novell.com>

	* TdsBulkCopy.cs (WriteParameterInfo): Update default precision from 28 to 29.
	
2009-05-26  Veerapuram Varadhan  <vvaradhan@novell.com>

	* TdsComm.cs (Append): When appending smalldatetime values, cast value of 
	days to short instead of ushort.  Fixes Tds error in RPC packet.
	
	* Tds70.cs (WriteParameterInfo): Instead of IsLargetType, compare only 
	the types that can take 0xFFFF as size if value is null. 
	
2009-05-26  Veerapuram Varadhan  <vvaradhan@novell.com>

	* TdsMetaParameter.cs (GetMetaType): If param is Nullable, use IntN instead 
	of BigInt for column type.
	
2009-05-16  Veerapuram Varadhan  <vvaradhan@novell.com>

	* TdsMetaParameter.cs (Prepare): Default precision is 29 and not 28.
	
2009-05-12  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Fixes rest of #497715 - Patch by Jonas Larsson <Jonas.Larsson@manodo.se>
	* TdsMetaParameter.cs: Add support for XML type.  For now, handle 
	XML type as just NVarchar.
	
2009-03-23  Veerapuram Varadhan  <vvaradhan@novell.com>

	* TdsMetaParameter.cs (GetMetaType): Return TdsColumnType.BigInt 
	instead of TdsColumnType.IntN.
	
2009-03-14  Veerapuram Varadhan  <vvaradhan@novell.com>

	* TdsMetaParameter.cs (ResizeValue): Return unmodified value 
	in case of size < 0.
	
2009-01-17  Gert Driesen  <drieseng@users.sourceforge.net>

	* TdsMetaParameter.cs: Modified signature of delegate to also allow
	conversion to be triggered by changes in TdsMetaParameter.

2009-01-14 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* TdsMetaParameter.cs: set_RawValue now calls set_Value so that
	'isUpdated' is set.

2009-01-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* TdsMetaParameter.cs: Define delegate for performing conversion for
	retrieving value as framework type from SqlParameter. Store both raw
	value as converted/resized value to allow us to perform lazy
	conversion. Only resize value if value or size were updated. Avoid
	double casting in ResizeValue.
