@@ -1,5 +1,11 @@
 2009-05-26  Veerapuram Varadhan  <vvaradhan@novell.com>
 
+	* TdsComm.cs (Append):  When appending strings of length bigger than 
+	output buffer, calculate and iterate over the strings according to 
+	the output buffer length.  Fixes ArgumentOutOfRangeException.
+	
+2009-05-26  Veerapuram Varadhan  <vvaradhan@novell.com>
+
 	* TdsBulkCopy.cs (WriteParameterInfo): Update default precision from 28 to 29.
 	
 2009-05-26  Veerapuram Varadhan  <vvaradhan@novell.com>
